apps/calibre-web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: default
  labels:
    app: calibre-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8083
      targetPort: http
      protocol: TCP
  selector:
    app: calibre-web
